--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <h1>Welcome to Charleston's Website</h1>
     <p>This site is hosted for free!</p>
 </body>
-<img src=https://people.com/thmb/R64GlYmYRw_c0LSFObHvX9DENPI=/4000x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(999x0:1001x2)/ariana-grande-wicked-11224-6641e30a3e05495c853acc168ab888ca.jpg>
+<img src="https://people.com/thmb/R64GlYmYRw_c0LSFObHvX9DENPI=/4000x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(999x0:1001x2)/ariana-grande-wicked-11224-6641e30a3e05495c853acc168ab888ca.jpg">
 </html>
